--- a/app/views/inspects/_new1.html.erb
+++ b/app/views/inspects/_new1.html.erb
@@ -7,7 +7,7 @@
        <thead>
         <th></th>
         <th>点検項目</th>
-        <th>判定</th>
+        <th><span class="label label-danger"> 必須 </span>　判定</th>
  　　　 </thead>
       <tbody>
         <tr>
@@ -36,7 +36,7 @@
          <thead>
           <th></th>
           <th>点検項目</th>
-          <th>判定</th>
+          <th><span class="label label-danger"> 必須 </span>　判定</th>
  　　　   </thead>
          <tbody>
           <tr>
@@ -61,4 +61,4 @@
        </table>
      </div> 
  </div>
-<% end %>   
+<% end %>     
