--- a/app/views/inspects/show.html.erb
+++ b/app/views/inspects/show.html.erb
@@ -1,6 +1,48 @@
 <div class="new-wrapper" >
   <div class="container">
    <% @inspects.each do|i| %>
+    <div class="row">
+     <div class="col-md-offset-1 col-md-10">       
+      <table class="table table-bordered">
+      　 <thead>
+         <tr>
+          <th>ID番号</th>
+          <th>点検日</th>
+          <th>車種</th>
+          <th>部品名</th>
+          <th>工程</th>
+          <th>班名</th>
+          <th>作業者</th>
+          <th>作成者</th>
+         </tr>
+        </thead>
+        <tbody>
+         <tr>
+          <td><%= i.id %></td>
+          <td><%= i.accrual_date %></td>
+          <td><%= i.car_name%></td>
+          <td><%= i.name %></td>
+          <td><%= i.process %></td>
+          <td><%= i.shop_name %></td>
+          <td><%= i.worker %></td>
+          <td><%= i.user.user_name %></td>
+     　 　 </tr>
+      　</tbody>
+      </table>　
+     </div>
+     <div class="col-md-offset-4 col-md-4">
+      <table class="table table-bordered">
+       <tr>
+        <th>交換部品</th>
+       </tr>
+       <tr>
+        <% if i.parts.present? %>
+         <td class="text_descrption"><%= i.parts %></td>
+        <% elsif %> 
+       </tr>　
+    　</table>   
+     </div>　 
+    </div>
     <% if i.check == "draw" %>
      <%= render partial:'show', locals:{ i: i} %>
     <% elsif i.check == "trim" %>
@@ -8,6 +50,28 @@
     <% else i.check == "BLK" %>
      <%= render partial:'show2', locals:{ i: i} %>
     <% end %> 
-   <% end %>
+    <div class="col-md-12">
+     <table class="table table-bordered">
+       <tr>
+        <th>画像</th>
+        <th>状況説明</th>
+       </tr>
+       <tr>
+        <div class="img">
+         <% if i.images.present? %>
+          <td width="150" align="center"><%= image_tag i.images.url, class:"topic_img" %></td>
+         <% elsif %> 
+          <td width="150" align="center"><h6>画像はありません</h6></td>
+         <% end %> 
+        </div>
+        <% if i.description.present? %>
+         <td class="text_descrption"><%= i. description %></td>
+        <% elsif %> 
+         <td width="150" align="center"><h6>備考はありません</h6></td>
+        <% end %>
+       </tr>
+     </table>
+    </div>
+  <% end %>  
  </div>     
 </div>      
