--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,6 +1,6 @@
 <div class="new-wrapper" >
   <div class="container">
-　　<% @topics.each do|t| %>
+　 <% @topics.each do|t| %>
    　 　 <div class="row">
         <div class="col-md-offset-1 col-md-10">       
          <table class="table table-bordered">
@@ -31,14 +31,14 @@
         　 　 </tr>
          　</tbody>
          </table>　
-        </div>  　
+       </div>  　
          　<div class="col-md-offset-4 col-md-4">
             <table class="table table-bordered">
              <tr>
               <th>交換部品</th>
              </tr>
              <tr>
-               <td class="topic_descrption"><%= t.parts %></td>
+               <td class="text_descrption"><%= t.parts %></td>
              </tr>　
           　</table>   
            </div>　 
@@ -55,18 +55,14 @@
               <% if t.images.present? %>
                <td width="150" align="center"><%= image_tag t.images.url, class:"topic_img" %></td>
               <% else %>
-               <td width="150" align="center"><h3>画像はありません</h3></td>
+               <td width="150" align="center"><h6>画像はありません</h6></td>
               <% end %> 
              </div>
-             <td class="topic_descrption"><%= t. description %></td>
+             <td class="text_descrption"><%= t. description %></td>
             </tr>
           </table>
-        </div>
-        　<%# if t.images.present? %>  
-        　<%# end %>
-           </div>
-          </div> 
-        </div>
+         </div> 
+       </div> 
    <% end %>  
   </div>     
 </div>      
