--- a/app/views/inspects/new.html.erb
+++ b/app/views/inspects/new.html.erb
@@ -24,7 +24,7 @@
          <%= i.text_field :car_name %>
          <%= i.label "部品名" %>
          <span class="label label-danger"> 必須 </span>
-         <%= i.text_field :name, class:"col" %>
+         <%= i.text_field :car_type, class:"col" %>
          <%= i.label "工程" %>
          <span class="label label-danger"> 必須 </span>
          <%= i.text_field :process, class:"col" %><br>
