--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -32,11 +32,11 @@
      　    <td><%= t.id %></td>
       　   <td><%= t.accrual_date %></td>
       　   <td><%= t.car_name %></td>
-      　   <td><%= t.name %></td>
+      　   <td><%= t.car_type %></td>
       　   <td><%= t.process %></td>
       　   <td><%= t.subject %></td>
       　   <td><%= t.shop_name %></td>
-　　　　　<td><%= t.user.user_name %></td>      　   
+　　　　　<td><%= t.user.name %></td>      　   
       　 　 <td><%= link_to "詳細", topic_path(id: t.id) %></td>　
       　   <td><%= link_to "削除", topics_destroy_path(id: t.id), method: :delete %></td>
       　  </tr>
