--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -30,7 +30,7 @@
           <%= f.text_field :car_name %>
           <%= f.label "部品名" %>
           <span class="label label-danger"> 必須 </span>
-          <%= f.text_field :name, class:"col" %>
+          <%= f.text_field :car_type, class:"col" %>
           <%= f.label "工程" %>
           <span class="label label-danger"> 必須 </span>
           <%= f.text_field :process, class:"col" %>
