--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -22,12 +22,12 @@
         　    <td><%= t.id %></td>
          　   <td><%= t.accrual_date %></td>
          　   <td><%= t.car_name %></td>
-         　   <td><%= t.name %></td>
+         　   <td><%= t.car_type %></td>
          　   <td><%= t.process %></td>
          　   <td><%= t.subject %></td>
          　   <td><%= t.shop_name %></td>
          　   <td><%= t.worker %></td>
-             <td><%= t.user.user_name %></td>
+             <td><%= t.user.name %></td>
         　 　 </tr>
          　</tbody>
          </table>　
