--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -57,8 +57,8 @@
        </div>
        <%= f.check_box :check %>
         <span class="label label-danger"> 必須 </span>
-       <%= "この内容で良ければチェックして保存ボタンをクリックしてください" %><br>
-       <%= f.submit '投稿' %>
+       <%= "この内容で良ければチェックして登録ボタンをクリックしてください" %><br>
+       <%= f.submit '登録' %>
       </div> 
     <% end %>
   </div>     
