レイアウト

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,20 +1,16 @@
-.navbar-transparent {
-  margin-bottom: 0px;
-  background-color: #97cdf3;
-  a {
-    color: #fff !important;
-  }
+.navbar{
+  float: left;
+  margin: 30px;
+}
 
-  .logo{
-    padding: 0px;
-    margin-top: 15px;
-    color: #fff 
-  }
+.nav {
+  margin: 30px;
 }
 
 
+
 .new-wrapper{
-  padding-top: 120px;
+  padding-top: 100px;
 }
 
 .table-bordered{
