--- a/app/views/inspects/_new1.html.erb
+++ b/app/views/inspects/_new1.html.erb
@@ -21,7 +21,7 @@
         </tr>
         <tr>
          <td>2</td>
-         <td>トリム型</td>
+         <td>↓項目追加予定↓</td>
          <td>
           <label><%= i.radio_button :judge2, "OK" %> OK</label>
           <label><%= i.radio_button :judge2, "NG" %> NG </label>
@@ -50,7 +50,7 @@
           </tr>
           <tr>
            <td>4</td>
-           <td>トリム型</td>
+           <td>↓項目追加予定↓</td>
            <td>
             <label><%= i.radio_button :judge4, "OK" %> OK</label>
             <label><%= i.radio_button :judge4, "NG" %> NG </label>
