--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -30,7 +30,9 @@
          <tr>
           <td><%= idx %></td>
      　    <td><%= t.id %></td>
-      　   <td><%= t.accrual_date %></td>
+      　   <td><%= t.accrual_date %>
+          　　　<%= t.time %>
+        　</td>      　   
       　   <td><%= t.car_name %></td>
       　   <td><%= t.car_type %></td>
       　   <td><%= t.process %></td>
