--- a/app/views/inspects/_show2.html.erb
+++ b/app/views/inspects/_show2.html.erb
@@ -14,7 +14,7 @@
       </tr>
       <tr>
        <td>2</td>
-       <td>~~~~~~~~~~~~~~~</td>
+       <td>↓項目追加予定↓</td>
        <td><%= i.judge2 %></td>
       </tr>
     </tbody>
@@ -35,7 +35,7 @@
       </tr>
       <tr>
        <td>4</td>
-       <td>~~~~~~~~~~~~~~~</td>
+       <td>↓項目追加予定↓</td>
        <td><%= i.judge4 %></td>
       </tr>
     </tbody>
