--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,15 +26,16 @@
           <div class="collapse navbar-collapse" id="bs-navi">
            <% if logged_in? %>
             <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "金型点検表作成", new_choice_path  %></li>
-              <li><%= link_to "金型点検一覧", inspects_path  %></li>
-              <li><%= link_to "破損報告書作成", new_topic_path %></li>
-              <li><%= link_to "破損報告書一覧", topics_path  %></li>
+              <li><%= link_to "Home", peges_path, style:"color:white;" %></li>  
+              <li><%= link_to "金型点検表作成", new_choice_path, style:"color:white;" %></li>
+              <li><%= link_to "金型点検一覧", inspects_path, style:"color:white;"  %></li>
+              <li><%= link_to "破損報告書作成", new_topic_path, style:"color:white;" %></li>
+              <li><%= link_to "破損報告書一覧", topics_path, style:"color:white;"  %></li>
               <% if current_user.admin?  %>  
-                <li><%= link_to "会員登録", new_user_path   %></li>
+                <li><%= link_to "会員登録", new_user_path, style:"color:white;"   %></li>
               <% end %>
               <% if logged_in? %> 
-               <li><%= link_to"ログアウト", logout_path, method: :delete  %></li>
+               <li><%= link_to"ログアウト", logout_path, method: :delete, style:"color:white;"  %></li>
               <% end %>
             </ul> 
            <% end %>
