レイアウト５

--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -48,7 +48,7 @@
       </div>
        <div class="row">
          <div class="col-md-10">  
-          <%= f.label "購入依頼部品" %>
+          <%= f.label "交換部品" %>
           <%= f.text_area :parts, class: "form-control" %>
           <%= f.label "状況説明" %>
           <span class="label label-danger"> 必須 </span>
